fix: alignement and margin on activities report grid for hebrew language

--- a/apps/gauzy/src/app/@shared/report/activities-report-grid/activities-report-grid.component.scss
+++ b/apps/gauzy/src/app/@shared/report/activities-report-grid/activities-report-grid.component.scss
@@ -43,7 +43,8 @@
 :host {
     ::ng-deep {
         .progress-percentage {
-            padding-right: 0;
+            @include nb-rtl(padding-left, 0);
+            @include nb-ltr(padding-right, 0);
             width: auto;
         }
     }
